[project]
name = "opengraph-images-and-more"
version = "0.0.0"
description = "Tool to do stuff py4web can't: opengraph images via wkhtmltopdf | TTS via Google TTS API"
authors = [
    { name = "Robin van der Noord", email = "robin@su6.nl" },
]
requires-python = ">=3.11"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "bandit",
]

[tool.black]
target-version = ["py311"]
line-length = 120
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^.*\.bak\/.+    # ignore every .bak directory
)
'''

[tool.ruff]
target-version = "py311"
line-length = 120
unfixable = [
    # Don't touch unused imports
    "F401",
]
extend-exclude = ["*.bak/"]

[tool.bandit]
# bandit -c pyproject.toml -r .
exclude_dirs = ["venv.bak", "venv"]
skips = [
    "B108"  # hard coded /tmp/... files are fine for me tbh
]

[tool.isort]
profile = "black"
extend_skip_glob = ["*.bak/*"]

# make this a meta package: not a library but simply allow me to run `pip install .[dev]`
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
# look nowhere for any code to 'build' since this is just used to manage (dev) dependencies
where = []